--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: hanjiarong-tech.github.io
 email: hanjiarong75@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  gosteel's Blog
+  hanjiarong's Blog
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "/" # the base hostname & protocol for your site
 twitter_username: sorumi33
