--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: hanjiarong75@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   hanjiarong's Blog
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "../" # the base hostname & protocol for your site
+url: "/" # the base hostname & protocol for your site
 twitter_username: sorumi33
 github_username: hanjiarong-tech
 tumblr_username: sorumi33
