--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ description: > # this means to ignore newlines until "baseurl:"
   hanjiarong's Blog
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "/" # the base hostname & protocol for your site
-twitter_username: sorumi33
+twitter_username: hanjiarong75
 github_username: hanjiarong-tech
-tumblr_username: sorumi33
+tumblr_username: hanjiarong75
 weibo_username: SpadeTrois
 weibo_url: https://weibo.com/u/3165063611
 
